# x402-ap2-a2a

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  mypy.ini  pyproject.toml  requirements.txt  run.py
.kiro/specs/hello-world-webapp/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
scripts/: type_check.py
templates/: .gitkeep  hello.html
tests/: __init__.py  test_app.py  test_config.py  test_integration.py
